<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTour">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/one"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/postImage"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tap_to_add_image"/>

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/place_name"
        android:layout_below="@+id/one"
        android:layout_margin="10dp"
        android:hint="@string/place_name"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="18sp"
        android:inputType="textCapWords"
        android:imeOptions="actionNext"
        android:background="@drawable/text_background"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnPost"
        android:layout_below="@+id/place_name"
        android:layout_alignParentEnd="true"
        android:background="@drawable/signup_back"
        android:textColor="@android:color/white"
        android:text="@string/add_post"
        android:textSize="18sp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"/>

</RelativeLayout>