<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeScreen"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"
        android:id="@+id/appLogo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/appLogo"
        android:layout_marginTop="20dp"
        android:textSize="35sp"
        android:id="@+id/label"
        android:textColor="@color/colorPrimary"
        android:text="@string/app_name"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/label"
        android:layout_marginTop="15dp"
        android:id="@+id/moto"
        android:text="@string/best_way_to_organize_travels"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/moto"
        android:layout_marginTop="90dp"
        android:text="@string/sign_up"
        android:textSize="17sp"
        android:textColor="@android:color/white"
        android:background="@drawable/signup_back"
        android:id="@+id/btnSignUp"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnSignUp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:textSize="17sp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/signin_back"
        android:id="@+id/btnSignIn"
        android:textAllCaps="false"/>

</RelativeLayout>